@@ -2,27 +2,20 @@ name := "gatling-puppet-agent-capture"
 
 version := "0.1.1-SNAPSHOT"
 
-scalaVersion := "2.9.2"
+scalaVersion := "2.11.5"
 
-libraryDependencies += "com.excilys.ebi.gatling" % "gatling-recorder" % "1.5.1" exclude("org.scala-lang", "scala-compiler")
+libraryDependencies += "io.gatling" % "gatling-recorder" % "2.1.4" exclude("org.scala-lang", "scala-compiler")
 
-libraryDependencies += "com.excilys.ebi.gatling" % "gatling-app" % "1.5.1"
+libraryDependencies += "io.gatling" % "gatling-app" % "2.1.4"
 
-libraryDependencies += "com.excilys.ebi.gatling.highcharts" % "gatling-charts-highcharts" % "1.5.1"
+libraryDependencies += "io.gatling.highcharts" % "gatling-charts-highcharts" % "2.1.4"
 
-resolvers += "Excilys" at "http://repository.excilys.com/content/groups/public"
-
-mainClass in (Compile, run) := Some("com.excilys.ebi.gatling.recorder.GatlingRecorder")
+mainClass in (Compile, run) := Some("io.gatling.recorder.GatlingRecorder")
 
 fork := true
 
-javaOptions in run ++= Seq("-server", "-XX:+UseThreadPriorities",
-  "-XX:ThreadPriorityPolicy=42", "-Xms512M", "-Xmx512M", "-Xmn100M", "-Xss2M",
-  "-XX:+HeapDumpOnOutOfMemoryError", "-XX:+AggressiveOpts",
-  "-XX:+OptimizeStringConcat", "-XX:+UseFastAccessorMethods", "-XX:+UseParNewGC",
-  "-XX:+UseConcMarkSweepGC", "-XX:+CMSParallelRemarkEnabled",
-  "-XX:+CMSClassUnloadingEnabled", "-XX:SurvivorRatio=8",
-  "-XX:MaxTenuringThreshold=1", "-XX:CMSInitiatingOccupancyFraction=75",
-  "-XX:+UseCMSInitiatingOccupancyOnly",
-  "-Dgatling.recorder.keystore.path=./target/tmp/ssl/gatling-proxy-keystore.jks",
-  "-Dgatling.recorder.keystore.passphrase=puppet")
+javaOptions in run ++= Seq("-Xms512M", "-Xmx512M", "-Xmn100M",
+  "-Drecorder.proxy.https.mode=ProvidedKeyStore",
+  "-Drecorder.proxy.https.keyStore.path=./target/tmp/ssl/gatling-proxy-keystore.jks",
+  "-Drecorder.proxy.https.keyStore.password=puppet",
+  "-Drecorder.proxy.https.keyStore.type=JKS")
